# jsrun

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  threadfree.md
.github/actions/build-wheels/: action.yml
.github/actions/publish-release/: action.yml
.github/docker/: Dockerfile.aarch64  Dockerfile.x86_64
.github/workflows/: CI.yml  pages.yml  verify-index-install.yml  wheels.yml
benchmarks/: bench_startup.py  suite.py
docs/: index.md  quickstart.md
docs/concepts/: evaluation.md  runtime.md
docs/contributing/: architecture.md
docs/guides/: bindings.md
docs/guides/advanced/: snapshots.md
docs/stubs/jsrun/: _jsrun.py
docs/use-cases/: plugin-system.md  serverless-runtime.md  workflow.md
examples/: basic_eval.py  custom_fetch.py  fastapi_multitenant.py  inspector.py  modules_basic.py
python/jsrun/: __init__.py  _jsrun.pyi
src/: lib.rs
src/runtime/: config.rs  context.rs  conversion.rs  error.rs  handle.rs  inspector.rs  js_value.rs  loader.rs  mod.rs  ops.rs  ops_bootstrap.js  python.rs  runner.rs  snapshot.rs  stream.rs
src/runtime/op_driver/: futures_unordered_driver.rs  mod.rs  pending_op.rs  submission_queue.rs
src/runtime/python/: mod.rs  runtime.rs  stats.rs
tests/: test_freethreading_concurrency_smoke.py  test_freethreading_import.py  test_function.py  test_jsrun_api.py  test_modules.py  test_ops.py  test_runtime.py  test_runtime_context.py
tools/: generate_pep503_index.py
tools/ci/: ensure_v8_known_target_triples.sh  patch_v8_git_for_manylinux.sh
