[package]
name = "jsrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_jsrun"            # Python import name
crate-type = ["cdylib"]

[dependencies]
log = "0.4.28"
once_cell = "1.21.3"
pyo3 = "0.27.0"
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
rusty_v8 = { package = "v8", version = "137.3.0" }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["rt", "macros", "time", "sync"] }
futures = "0.3.31"
