[package]
name = "jsrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_jsrun"            # Python import name
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.356.0"
deno_error = "0.7.0"
log = "0.4.28"
pyo3 = "0.27.0"
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["rt", "macros", "time", "sync"] }
