[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "jsrun"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = ["maturin"]
testing = [{ include-group = "dev" }, "pytest>=8.4.0", "pytest-asyncio>=1.2.0"]
all = [{ include-group = "dev" }, { include-group = 'testing' }]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jsrun._jsrun"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
