[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "jsrun"
requires-python = ">=3.10"
description = "Modern embedded JavaScript runtime for Python powered by V8 and Rust."
readme = "README.md"
license = 'MIT'
authors = [{ name = "Xin Fu", email = "xin@imfing.com" }]
keywords = ["javascript", "v8", "pyo3", "asyncio", "rust-extension"]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  'Operating System :: MacOS',
  'Operating System :: POSIX :: Linux',
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/imfing/jsrun"
Repository = "https://github.com/imfing/jsrun"

[dependency-groups]
dev = ["maturin"]
testing = [{ include-group = "dev" }, "pytest>=8.4.0", "pytest-asyncio>=1.2.0"]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.0",
  "mkdocstrings[python]>=0.28.0",
]
all = [
  { include-group = "dev" },
  { include-group = 'testing' },
  { include-group = 'docs' },
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jsrun._jsrun"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error:.*unsendable.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
enable = ["cpython-freethreading"]
build-frontend = "build[uv]"
test-command = [
  "python -c \"import subprocess, sys; subprocess.check_call(['uv', 'pip', 'install', '--python', sys.executable, 'pytest', 'pytest-asyncio'])\"",
  "python -m pytest -q {project}/tests",
]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[[tool.cibuildwheel.overrides]]
select = "cp314t-*"
environment = { PYTHON_GIL = "0" }
test-command = [
  "python -c \"import subprocess, sys; subprocess.check_call(['uv', 'pip', 'install', '--python', sys.executable, 'pytest', 'pytest-asyncio'])\"",
  "python -W error::RuntimeWarning -m pytest -q {project}/tests/test_freethreading_import.py",
  "python -m pytest -q {project}/tests",
]
